Created nav bar and imported custom fonts -- no server side functionality yet.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,9 +14,10 @@ html {
  * Global layout stuff
  */
 
-body {
+ body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
 }
 
