--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,8 +4,9 @@ nav {
   height: 120px;
   display: flex;
   align-items: center;
-  position: absolute;
-  width: 100%
+  position: fixed;
+  width: 100%;
+  top: 0px;
 }
 
 div.homeTitle {
