--- a/public/styles/main-tweet.css
+++ b/public/styles/main-tweet.css
@@ -11,7 +11,6 @@ article.tweet {
 }
 
 article.tweet header {
-  font-weight:lighter;
   background: none;
   position: relative;
   z-index: 1;
@@ -23,12 +22,21 @@ article.tweet header {
   width:  95%;
 }
 
+h3.user {
+  font-family: 'Source Sans Pro';
+  font-weight: 300;
+}
+
 h3.handle {
+  font-family: 'Source Sans Pro';
+  font-weight: 300;
   margin-left: auto;
   color: lightgray;
 }
 
 p.tweetBody {
+  font-family: 'Source Sans Pro';
+  font-weight: 600;
   width:  95%;
   border-bottom: groove;
   border-color: black;
@@ -41,6 +49,10 @@ article.tweet footer {
   flex-direction: row;
   justify-content: flex-start;
   width: 95%;
+}
+
+p.date {
+  font-size: 20px;
 }
 
 div.icons {
