Added error functionality and customizer error messages, rather than alert.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -44,4 +44,17 @@ section {
   overflow: auto; 
 }
 
+.error {
+  display: none;
+  color: red;
+  border-style: solid;
+  margin-top: 1em;
+
+}
+
+.error p {
+  display: none;
+  margin-left: 1em;
+}
+
 
