--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #4056A1;
+  background-color: transparent;
   color: #FFFFFF;
   height: 120px;
   display: flex;
@@ -18,6 +18,8 @@ div.homeTitle {
 div.newTweetHere {
   margin-left: auto; 
   margin-right: 1.5em;
+  display: flex;
+  flex-direction: column;
   
 }
 
@@ -30,5 +32,38 @@ p.tweetTitle{
   display: flex;
   justify-content: center; 
   color: red;
+  
 }
+
+.fa-angles-down:hover {
+  display: flex;
+  justify-content: center; 
+  color: salmon;
+}
+
+@keyframes bounce {
+  0% {
+  transform: scale(1,1) translate(0px, 0px);
+  }
+
+  30%{
+  transform: scale(1,1) translate(0px, 5px); 
+  }
+
+  75%{
+  transform: scale(1,1) translate(0px, 5px); 
+  }
+
+  100% {
+  transform: scale(1,1) translate(0px, 0px);
+  }
+
+}
+nav button {
+  animation: bounce 0.75s infinite;
+  background-color: transparent;
+  
+}
+
+
 
